// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterItem Component FilterItem renders CheckboxField 1`] = `
<div>
  <div>
    Mocked CheckboxField props: 
    {"inputValue":[{"label":"LABEL","value":"VALUE"}],"inline":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders Column and title 1`] = `
<div>
  <div
    class="gds-layout-col"
  >
    <div
      class="gds-layout-section-container"
    >
      <div
        class="section-header"
      >
        <h2
          class="gds-typography"
        >
          TITLE
        </h2>
      </div>
      <div
        class="section-body"
        style="transition: height 500ms linear; height: auto;"
      />
    </div>
    <div>
      Mocked AmountField props: 
      {"name":"number","inline":false}
    </div>
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders DatePickerField 1`] = `
<div>
  <div>
    Mocked DatePickerField props: 
    {"name":"date","inputValue":"2022-04-10T00:00:00.000Z","inline":false,"usePortal":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders DynamicSearchField 1`] = `
<div>
  <div>
    Mocked DynamicSearchField props: 
    {"inputValue":"value1","name":"dynamicsearch","inline":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders MultiSelectField 1`] = `
<div>
  <div>
    Mocked MultiSelectField props: 
    {"inputValue":["value1"],"name":"multiselect","numberOfItemLabel":"","numberOfItemsLabel":"","options":[],"inline":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders Number / AmountField 1`] = `
<div>
  <div>
    Mocked AmountField props: 
    {"name":"number","inputValue":-12.34,"inline":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders SelectField 1`] = `
<div>
  <div>
    Mocked SelectField props: 
    {"inputValue":"VALUE1","name":"select","options":[],"inline":false}
  </div>
</div>
`;

exports[`FilterItem Component FilterItem renders TextField 1`] = `
<div>
  <div>
    Mocked TextField props: 
    {"inputValue":"TEXT","name":"text","inline":false}
  </div>
</div>
`;
